<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <TextView
        android:id="@+id/homepage_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/homepage_header_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/item_name_label_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_header" />

    <EditText
        android:id="@+id/item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Enter Name Here"
        android:ems="10"
        android:hint="@string/item_name_hint"
        android:inputType="textCapSentences"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_name_label" />

    <TextView
        android:id="@+id/item_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/item_price_label_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_name" />

    <EditText
        android:id="@+id/item_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="Enter Price Here"
        android:ems="10"
        android:hint="@string/price_label_hint"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/item_price_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/item_price_label" />

    <DatePicker
        android:id="@+id/datePickerSpinner"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_price_label" />

    <LinearLayout
        android:id="@+id/entry_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datePickerSpinner"
        >

    <Button
        android:id="@+id/resisted"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:onClick="resistedBuy"
        android:text="@string/resisted_button_text"
        android:textSize="18sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/indulged"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:onClick="indulgedBuy"
        android:text="@string/indulged_button_text"
        android:textSize="18sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/resisted"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <Button
        android:id="@+id/financial_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="launchFinancialHistory"
        android:text="@string/financial_history_button_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entry_buttons" />

    <Button
        android:id="@+id/financial_goals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/financial_goals_button_text"
        android:textSize="18sp"
        android:onClick="launchFinancialGoals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/financial_history" />

    <TextView
        android:id="@+id/displayTotalSum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Money Saved: $0"
        android:gravity="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>